optimised stuff and added comments

--- a/WisdomBites/src/main/resources/WisdomBites/StudyTracker.fxml
+++ b/WisdomBites/src/main/resources/WisdomBites/StudyTracker.fxml
@@ -27,8 +27,7 @@
             <Button fx:id="clearAllButton" text="Clear All" onAction="#handleClearAll"
                     style="-fx-background-color: #fdd28e; -fx-background-radius: 20; -fx-font-size: 16px; -fx-padding: 5 15; -fx-text-fill: #5a3921;"/>
 
-            <Label fx:id="statusLabel" text=""
-                   style="-fx-font-size: 14px; -fx-text-fill: #5a3921; -fx-padding: 0 0 0 20;"/>
+
         </HBox>
     </top>
 
@@ -47,7 +46,7 @@
             <VBox GridPane.columnIndex="0" spacing="10">
                 <HBox spacing="10" alignment="CENTER_LEFT">
                     <Label text="Unit 1:" style="-fx-font-weight: bold;"/>
-                    <TextField fx:id="unitName1" style="-fx-font-weight: bold; -fx-pref-width: 120;"/>
+                    <TextField fx:id="unitCode1" style="-fx-font-weight: bold; -fx-pref-width: 120;"/>
                 </HBox>
                 <ProgressBar fx:id="progressBar1" prefWidth="200"/>
 
@@ -111,7 +110,7 @@
             <VBox GridPane.columnIndex="1" spacing="10">
                 <HBox spacing="10" alignment="CENTER_LEFT">
                     <Label text="Unit 2:" style="-fx-font-weight: bold;"/>
-                    <TextField fx:id="unitName2" style="-fx-font-weight: bold; -fx-pref-width: 120;"/>
+                    <TextField fx:id="unitCode2" style="-fx-font-weight: bold; -fx-pref-width: 120;"/>
                 </HBox>
                 <ProgressBar fx:id="progressBar2" prefWidth="200"/>
 
@@ -175,7 +174,7 @@
             <VBox GridPane.columnIndex="2" spacing="10">
                 <HBox spacing="10" alignment="CENTER_LEFT">
                     <Label text="Unit 3:" style="-fx-font-weight: bold;"/>
-                    <TextField fx:id="unitName3" style="-fx-font-weight: bold; -fx-pref-width: 120;"/>
+                    <TextField fx:id="unitCode3" style="-fx-font-weight: bold; -fx-pref-width: 120;"/>
                 </HBox>
                 <ProgressBar fx:id="progressBar3" prefWidth="200"/>
 
@@ -239,7 +238,7 @@
             <VBox GridPane.columnIndex="3" spacing="10">
                 <HBox spacing="10" alignment="CENTER_LEFT">
                     <Label text="Unit 4:" style="-fx-font-weight: bold;"/>
-                    <TextField fx:id="unitName4" style="-fx-font-weight: bold; -fx-pref-width: 120;"/>
+                    <TextField fx:id="unitCode4" style="-fx-font-weight: bold; -fx-pref-width: 120;"/>
                 </HBox>
                 <ProgressBar fx:id="progressBar4" prefWidth="200"/>
 
