--- a/WisdomBites/src/main/resources/WisdomBites/daily_tip_view.fxml
+++ b/WisdomBites/src/main/resources/WisdomBites/daily_tip_view.fxml
@@ -24,12 +24,12 @@
             <HBox alignment="CENTER">
                 <TextArea fx:id="tipBox" editable="false" wrapText="true"
                           style="-fx-font-size: 18px; -fx-text-fill: black;
-                             -fx-background-color: white; -fx-border-color: black;
+                             -fx-background-color: white; -fx-border-color: #5a3921;
                              -fx-border-width: 2; -fx-padding: 20;"
                           prefWidth="800" prefHeight="300"/>
             </HBox>
             <Button text="Refresh Tip" onAction="#handleTip"
-                    style="-fx-background-color: #fdd28e; -fx-background-radius: 20; -fx-font-size: 18px;"/>
+                    style="-fx-background-color: #fdd28e; -fx-background-radius: 20; -fx-font-size: 18px; -fx-text-fill: #5a3921;"/>
         </VBox>
     </center>
 
